<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<EditText
    android:id="@+id/race_Value"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:hint="@string/digit_race_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
        android:id="@+id/atendimento_D0_Condutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/race_Value"
        />
    <RadioGroup
        android:id="@+id/percentage_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/option_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atendimento_D0_Condutor">
            <RadioButton
            android:id="@+id/option_excelent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excelent"/>
        <RadioButton
            android:id="@+id/option_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            />
        <RadioButton
            android:id="@+id/option_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regular"/>
        <RadioButton
            android:id="@+id/option_terrible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terrible"/>
    </RadioGroup>

    <Switch
        android:id="@+id/round_run"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_run_text"
        app:layout_constraintStart_toStartOf="@id/percentage_options"
        app:layout_constraintTop_toBottomOf="@id/percentage_options"
        app:layout_constraintEnd_toEndOf="parent"
        android:checked="true"
        />

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculete_text"
        app:layout_constraintStart_toStartOf="@id/round_run"
        app:layout_constraintTop_toBottomOf="@id/round_run"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/run_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Valor a mais pela avaliação: "
        app:layout_constraintStart_toStartOf="@+id/calculate"
        app:layout_constraintTop_toBottomOf="@id/calculate"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>